k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graduados-backend
  namespace: web-internacionales-appgraduados
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graduados-backend
  template:
    metadata:
      labels:
        app: graduados-backend
    spec:
      imagePullSecrets:
      - name: harbor.unicen.edu.ar
      containers:
      - name: backend
        image: harbor.unicen.edu.ar/web/graduados-backend:5.4.2
        volumeMounts:
        - name: database-storage
          mountPath: /app/data
        - name: uploads-storage
          mountPath: /app/uploads
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: graduados-db-pvc
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: graduados-uploads-pvc
