k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: graduados-backend
  namespace: web-internacionales-mapa
spec:
  selector:
    app: graduados-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: graduados-frontend
  namespace: web-internacionales-mapa
spec:
  selector:
    app: graduados-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
