k8s/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graduados-api
  namespace: web-internacionales-appgraduados
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - internacionalesgraduados.unicen.edu.ar
    secretName: graduados-tls
  rules:
  - host: internacionalesgraduados.unicen.edu.ar
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
