k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graduados-ingress
  namespace: web-internacionales-mapa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 16224m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - internacionalesgraduados.nuevo.unicen.edu.ar
    secretName: internacionalesgraduados.nuevo.unicen.edu.ar
  rules:
  - host: internacionalesgraduados.nuevo.unicen.edu.ar
    http:
      paths:
      - path: /graduados(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-frontend
            port:
              number: 80
      - path: /graduados/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
